fix: complete remaining eogo to zgo renames
- Fixed plugin loader and commands
- Fixed email welcome message
- Fixed CLI help text and examples
- Fixed routes/welcome.go
- All 'eogo' references now properly renamed to 'zgo'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         env:
           POSTGRES_USER: test
           POSTGRES_PASSWORD: test
-          POSTGRES_DB: eogo_test
+          POSTGRES_DB: zgo_test
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -74,7 +74,7 @@ jobs:
         env:
           DB_HOST: localhost
           DB_PORT: 5432
-          DB_NAME: eogo_test
+          DB_NAME: zgo_test
           DB_USERNAME: test
           DB_PASSWORD: test
           REDIS_HOST: localhost
@@ -101,7 +101,7 @@ jobs:
       
       - name: Build binary
         run: |
-          go build -ldflags "-s -w -X main.Version=${{ github.sha }}" -o eogo ./cmd/eogo
+          go build -ldflags "-s -w -X main.Version=${{ github.sha }}" -o zgo ./cmd/zgo
           go build -ldflags "-s -w -X main.Version=${{ github.sha }}" -o server ./cmd/server
       
       - name: Upload artifacts
@@ -109,5 +109,5 @@ jobs:
         with:
           name: binaries
           path: |
-            eogo
+            zgo
             server
