--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.8'
 
 services:
-  eogo-app:
+  zgo-app:
     build: 
       context: .
       dockerfile: Dockerfile
-    container_name: eogo-api
+    container_name: zgo-api
     restart: always
     ports:
       - "8025:8025"
@@ -13,43 +13,43 @@ services:
       - APP_ENV=production
       - SERVER_PORT=8025
       - DB_CONNECTION=postgres
-      - DB_HOST=eogo-db
+      - DB_HOST=zgo-db
       - DB_PORT=5432
-      - DB_DATABASE=eogo
-      - DB_USERNAME=eogo_user
-      - DB_PASSWORD=eogo_pass
-      - JWT_SECRET=${JWT_SECRET:-eogo_secret_vibe_enterprise}
+      - DB_DATABASE=zgo
+      - DB_USERNAME=zgo_user
+      - DB_PASSWORD=zgo_pass
+      - JWT_SECRET=${JWT_SECRET:-zgo_secret_vibe_enterprise}
       - TZ=Asia/Shanghai
     depends_on:
-      eogo-db:
+      zgo-db:
         condition: service_healthy
     networks:
-      - eogo-network
+      - zgo-network
 
-  eogo-db:
+  zgo-db:
     image: postgres:14-alpine
-    container_name: eogo-postgres
+    container_name: zgo-postgres
     restart: always
     environment:
-      - POSTGRES_DB=eogo
-      - POSTGRES_USER=eogo_user
-      - POSTGRES_PASSWORD=eogo_pass
+      - POSTGRES_DB=zgo
+      - POSTGRES_USER=zgo_user
+      - POSTGRES_PASSWORD=zgo_pass
       - TZ=Asia/Shanghai
     ports:
       - "5432:5432"
     volumes:
-      - eogo_db_data:/var/lib/postgresql/data
+      - zgo_db_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U eogo_user -d eogo"]
+      test: ["CMD-SHELL", "pg_isready -U zgo_user -d eogo"]
       interval: 10s
       timeout: 5s
       retries: 5
     networks:
-      - eogo-network
+      - zgo-network
 
 networks:
-  eogo-network:
+  zgo-network:
     driver: bridge
 
 volumes:
-  eogo_db_data:
+  zgo_db_data:
