--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Eogo
+APP_NAME=ZGO
 APP_ENV=development
 APP_DEBUG=true
 APP_URL=http://localhost:8025
@@ -53,7 +53,7 @@ REDIS_MIN_IDLE_CONNS=5
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_key_here
 JWT_EXPIRE_DAYS=7
-JWT_ISSUER=eogo
+JWT_ISSUER=zgo
 
 # Log Configuration
 LOG_LEVEL=debug
