--- a/.golangci.yml
+++ b/.golangci.yml
@@ -35,7 +35,7 @@ linters-settings:
     simplify: true
   
   goimports:
-    local-prefixes: github.com/eogo-dev/eogo
+    local-prefixes: github.com/zgiai/zgo
   
   misspell:
     locale: US
